--- a/x-pack/plugins/observability/tsconfig.json
+++ b/x-pack/plugins/observability/tsconfig.json
@@ -100,6 +100,7 @@
     "@kbn/presentation-util-plugin",
     "@kbn/task-manager-plugin",
     "@kbn/core-elasticsearch-client-server-mocks",
+    "@kbn/ingest-pipelines-plugin",
     "@kbn/core-saved-objects-api-server-mocks"
   ],
   "exclude": [
