skip type check

--- a/.buildkite/pipelines/pull_request/type_check.yml
+++ b/.buildkite/pipelines/pull_request/type_check.yml
@@ -1,6 +1,7 @@
 steps:
   - command: .buildkite/scripts/steps/check_types.sh
     label: 'Check Types'
+    key: check_types
     agents:
       queue: n2-16-spot
     timeout_in_minutes: 60
