--- a/.buildkite/pipelines/pull_request/base.yml
+++ b/.buildkite/pipelines/pull_request/base.yml
@@ -25,6 +25,8 @@ steps:
       queue: n2-4-spot
     key: build_api_docs
     timeout_in_minutes: 60
+    depends_on:
+      check_types
     retry:
       automatic:
         - exit_status: '-1'
@@ -151,7 +153,7 @@ steps:
     retry:
       automatic:
         - exit_status: '*'
-          limit: 1        
+          limit: 1
 
   - command: .buildkite/scripts/steps/functional/security_solution_entity_analytics.sh
     label: 'Entity Analytics - Security Solution Cypress Tests'
@@ -200,7 +202,7 @@ steps:
       automatic:
         - exit_status: '*'
           limit: 1
-          
+
   - command: .buildkite/scripts/steps/functional/security_solution_detection_engine.sh
     label: 'Detection Engine - Security Solution Cypress Tests'
     agents:
@@ -235,7 +237,7 @@ steps:
     retry:
       automatic:
         - exit_status: '*'
-          limit: 1        
+          limit: 1
 
   - command: .buildkite/scripts/steps/functional/security_solution_investigations.sh
     label: 'Investigations - Security Solution Cypress Tests'
