--- a/x-pack/plugins/observability_ai_assistant/tsconfig.json
+++ b/x-pack/plugins/observability_ai_assistant/tsconfig.json
@@ -55,7 +55,8 @@
     "@kbn/dev-cli-runner",
     "@kbn/core-analytics-browser",
     "@kbn/core-http-browser",
-    "@kbn/security-plugin-types-common"
+    "@kbn/security-plugin-types-common",
+    "@kbn/ml-plugin"
   ],
   "exclude": ["target/**/*"]
 }
