Revert "Replace deprecated node-sass with sass (#161813)"
This reverts commit 87d5d6be262068d52d7125a6d75670d4c2c09ea2.

--- a/renovate.json
+++ b/renovate.json
@@ -362,7 +362,7 @@
     {
       "groupName": "scss",
       "packageNames": [
-        "sass-embedded"
+        "node-sass"
       ],
       "reviewers": [
         "team:kibana-operations"
