--- a/package.json
+++ b/package.json
@@ -1597,6 +1597,7 @@
     "mutation-observer": "^1.0.3",
     "native-hdr-histogram": "^1.0.0",
     "nock": "12.0.3",
+    "node-sass": "^8.0.0",
     "null-loader": "^3.0.0",
     "nyc": "^15.1.0",
     "oboe": "^2.1.4",
@@ -1624,8 +1625,7 @@
     "regenerate": "^1.4.0",
     "resolve": "^1.22.0",
     "rxjs-marbles": "^7.0.1",
-    "sass-embedded": "^1.69.5",
-    "sass-loader": "^10.5.0",
+    "sass-loader": "^10.4.1",
     "selenium-webdriver": "^4.16.0",
     "simple-git": "^3.16.0",
     "sinon": "^7.4.2",
