--- a/packages/kbn-ftr-common-functional-ui-services/tsconfig.json
+++ b/packages/kbn-ftr-common-functional-ui-services/tsconfig.json
@@ -15,5 +15,8 @@
   ],
   "kbn_references": [
     "@kbn/test",
+    "@kbn/tooling-log",
+    "@kbn/repo-info",
+    "@kbn/test-subj-selector",
   ]
 }
