--- a/package.json
+++ b/package.json
@@ -1076,6 +1076,7 @@
     "remark-stringify": "^8.0.3",
     "require-in-the-middle": "^7.2.0",
     "reselect": "^4.1.6",
+    "resize-observer-polyfill": "1.5.1",
     "rison-node": "1.0.2",
     "rxjs": "^7.5.5",
     "safe-squel": "^5.12.5",
