--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -10,6 +10,7 @@ metadata:
     github.com/project-slug: elastic/kibana
     github.com/team-slug: elastic/kibana-tech-leads
     buildkite.com/project-slug: elastic/kibana
+    sonarqube.org/project-key: elastic_kibana_AYvOkAHeQZlFqhqWIr9
 
   tags:
     - typescript
