--- a/src/plugins/text_based_languages/kibana.jsonc
+++ b/src/plugins/text_based_languages/kibana.jsonc
@@ -7,7 +7,8 @@
     "server": false,
     "browser": true,
     "optionalPlugins": [
-      "indexManagement"
+      "indexManagement",
+      "observabilityAIAssistant"
     ],
     "requiredPlugins": [
       "data",
