--- a/x-pack/plugins/observability_ai_assistant/scripts/evaluation/.eslintrc.json
+++ b/x-pack/plugins/observability_ai_assistant/scripts/evaluation/.eslintrc.json
@@ -7,7 +7,13 @@
       "rules": {
         "@kbn/imports/require_import": [
           "error",
-          "mocha"
+          "@kbn/ambient-ftr-types"
+        ],
+        "@typescript-eslint/triple-slash-reference": [
+          "off"
+        ],
+        "spaced-comment": [
+          "off"
         ]
       }
     }
