--- a/x-pack/plugins/observability_ai_assistant/tsconfig.json
+++ b/x-pack/plugins/observability_ai_assistant/tsconfig.json
@@ -56,7 +56,10 @@
     "@kbn/core-analytics-browser",
     "@kbn/core-http-browser",
     "@kbn/security-plugin-types-common",
-    "@kbn/ml-plugin"
+    "@kbn/ml-plugin",
+    "@kbn/expect",
+    "@kbn/apm-synthtrace-client",
+    "@kbn/apm-synthtrace"
   ],
   "exclude": ["target/**/*"]
 }
