--- a/package.json
+++ b/package.json
@@ -1486,7 +1486,7 @@
     "abab": "^2.0.4",
     "aggregate-error": "^3.1.0",
     "antlr4ts-cli": "^0.5.0-alpha.3",
-    "apidoc-markdown": "^7.2.4",
+    "apidoc-markdown": "7.3.0",
     "argsplit": "^1.0.5",
     "autoprefixer": "^10.4.7",
     "axe-core": "^4.8.2",
