--- a/src/plugins/data/tsconfig.json
+++ b/src/plugins/data/tsconfig.json
@@ -54,6 +54,7 @@
     "@kbn/es-types",
     "@kbn/code-editor",
     "@kbn/core-test-helpers-model-versions",
+    "@kbn/esql-utils",
     "@kbn/react-kibana-mount",
     "@kbn/search-types"
   ],
