--- a/packages/presentation/presentation_publishing/tsconfig.json
+++ b/packages/presentation/presentation_publishing/tsconfig.json
@@ -11,5 +11,6 @@
     "@kbn/data-views-plugin",
     "@kbn/expressions-plugin",
     "@kbn/core-execution-context-common",
+    "@kbn/presentation-publishing",
   ]
 }
