--- a/x-pack/plugins/observability_solution/infra/tsconfig.json
+++ b/x-pack/plugins/observability_solution/infra/tsconfig.json
@@ -101,7 +101,9 @@
     "@kbn/search-types",
     "@kbn/router-utils",
     "@kbn/react-kibana-context-render",
-    "@kbn/react-kibana-context-theme"
+    "@kbn/react-kibana-context-theme",
+    "@kbn/presentation-publishing",
+    "@kbn/presentation-containers"
   ],
   "exclude": [
     "target/**/*"
