--- a/.buildkite/pipelines/pull_request/base.yml
+++ b/.buildkite/pipelines/pull_request/base.yml
@@ -26,20 +26,20 @@ steps:
         - exit_status: '-1'
           limit: 3
 
-  - command: .buildkite/scripts/steps/quick_checks.sh
-    label: 'Quick Checks'
-    agents:
-      image: family/kibana-ubuntu-2004
-      imageProject: elastic-images-prod
-      provider: gcp
-      machineType: n2-standard-2
-      preemptible: true
-    key: quick_checks
-    timeout_in_minutes: 60
-    retry:
-      automatic:
-        - exit_status: '-1'
-          limit: 3
+  # - command: .buildkite/scripts/steps/quick_checks.sh
+  #   label: 'Quick Checks'
+  #   agents:
+  #     image: family/kibana-ubuntu-2004
+  #     imageProject: elastic-images-prod
+  #     provider: gcp
+  #     machineType: n2-standard-2
+  #     preemptible: true
+  #   key: quick_checks
+  #   timeout_in_minutes: 60
+  #   retry:
+  #     automatic:
+  #       - exit_status: '-1'
+  #         limit: 3
 
   - wait
 
@@ -76,77 +76,77 @@ steps:
         - exit_status: '*'
           limit: 1
 
-  - command: .buildkite/scripts/steps/lint.sh
-    label: 'Linting'
-    agents:
-      image: family/kibana-ubuntu-2004
-      imageProject: elastic-images-prod
-      provider: gcp
-      machineType: n2-standard-8
-      preemptible: true
-    key: linting
-    timeout_in_minutes: 60
-    retry:
-      automatic:
-        - exit_status: '-1'
-          limit: 3
+  # - command: .buildkite/scripts/steps/lint.sh
+  #   label: 'Linting'
+  #   agents:
+  #     image: family/kibana-ubuntu-2004
+  #     imageProject: elastic-images-prod
+  #     provider: gcp
+  #     machineType: n2-standard-8
+  #     preemptible: true
+  #   key: linting
+  #   timeout_in_minutes: 60
+  #   retry:
+  #     automatic:
+  #       - exit_status: '-1'
+  #         limit: 3
 
-  - command: .buildkite/scripts/steps/check_types.sh
-    label: 'Check Types'
-    agents:
-      image: family/kibana-ubuntu-2004
-      imageProject: elastic-images-prod
-      provider: gcp
-      machineType: n2-standard-4
-      preemptible: true
-    key: check_types
-    timeout_in_minutes: 70
-    retry:
-      automatic:
-        - exit_status: '-1'
-          limit: 3
+  # - command: .buildkite/scripts/steps/check_types.sh
+  #   label: 'Check Types'
+  #   agents:
+  #     image: family/kibana-ubuntu-2004
+  #     imageProject: elastic-images-prod
+  #     provider: gcp
+  #     machineType: n2-standard-4
+  #     preemptible: true
+  #   key: check_types
+  #   timeout_in_minutes: 70
+  #   retry:
+  #     automatic:
+  #       - exit_status: '-1'
+  #         limit: 3
 
-  - command: .buildkite/scripts/steps/lint_with_types.sh
-    label: 'Linting (with types)'
-    agents:
-      image: family/kibana-ubuntu-2004
-      imageProject: elastic-images-prod
-      provider: gcp
-      machineType: n2-standard-16
-      preemptible: true
-    key: linting_with_types
-    timeout_in_minutes: 90
-    retry:
-      automatic:
-        - exit_status: '-1'
-          limit: 3
+  # - command: .buildkite/scripts/steps/lint_with_types.sh
+  #   label: 'Linting (with types)'
+  #   agents:
+  #     image: family/kibana-ubuntu-2004
+  #     imageProject: elastic-images-prod
+  #     provider: gcp
+  #     machineType: n2-standard-16
+  #     preemptible: true
+  #   key: linting_with_types
+  #   timeout_in_minutes: 90
+  #   retry:
+  #     automatic:
+  #       - exit_status: '-1'
+  #         limit: 3
 
-  - command: .buildkite/scripts/steps/checks.sh
-    label: 'Checks'
-    key: checks
-    agents:
-      image: family/kibana-ubuntu-2004
-      imageProject: elastic-images-prod
-      provider: gcp
-      machineType: n2-standard-2
-      preemptible: true
-    timeout_in_minutes: 60
-    retry:
-      automatic:
-        - exit_status: '-1'
-          limit: 3
+  # - command: .buildkite/scripts/steps/checks.sh
+  #   label: 'Checks'
+  #   key: checks
+  #   agents:
+  #     image: family/kibana-ubuntu-2004
+  #     imageProject: elastic-images-prod
+  #     provider: gcp
+  #     machineType: n2-standard-2
+  #     preemptible: true
+  #   timeout_in_minutes: 60
+  #   retry:
+  #     automatic:
+  #       - exit_status: '-1'
+  #         limit: 3
 
-  - command: .buildkite/scripts/steps/api_docs/build_api_docs.sh
-    label: 'Build API Docs'
-    agents:
-      image: family/kibana-ubuntu-2004
-      imageProject: elastic-images-prod
-      provider: gcp
-      machineType: n2-standard-4
-      preemptible: true
-    key: build_api_docs
-    timeout_in_minutes: 90
-    retry:
-      automatic:
-        - exit_status: '-1'
-          limit: 3
+  # - command: .buildkite/scripts/steps/api_docs/build_api_docs.sh
+  #   label: 'Build API Docs'
+  #   agents:
+  #     image: family/kibana-ubuntu-2004
+  #     imageProject: elastic-images-prod
+  #     provider: gcp
+  #     machineType: n2-standard-4
+  #     preemptible: true
+  #   key: build_api_docs
+  #   timeout_in_minutes: 90
+  #   retry:
+  #     automatic:
+  #       - exit_status: '-1'
+  #         limit: 3
