--- a/.buildkite/pipelines/artifacts.yml
+++ b/.buildkite/pipelines/artifacts.yml
@@ -6,6 +6,7 @@ steps:
       imageProject: elastic-images-qa
       provider: gcp
       machineType: c3-standard-22
+      zones: 'us-central1-a,us-central1-b,us-central1-c'
     timeout_in_minutes: 75
     retry:
       automatic:
