--- a/.buildkite/pipelines/artifacts_container_image.yml
+++ b/.buildkite/pipelines/artifacts_container_image.yml
@@ -6,4 +6,5 @@ steps:
       imageProject: elastic-images-qa
       provider: gcp
       machineType: c3-standard-22
+      zones: 'us-central1-a,us-central1-b,us-central1-c'
     timeout_in_minutes: 60
