--- a/.buildkite/package.json
+++ b/.buildkite/package.json
@@ -26,7 +26,7 @@
     "chai": "^4.3.10",
     "mocha": "^10.3.0",
     "nock": "^12.0.2",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.11.0",
     "typescript": "^5.4.5"
   },
   "imports": {
