--- a/.buildkite/pipelines/es_serverless/emergency_release_branch_testing.yml
+++ b/.buildkite/pipelines/es_serverless/emergency_release_branch_testing.yml
@@ -9,7 +9,7 @@ notify:
     if: "build.state == 'passed' || build.state == 'failed' || build.state == 'scheduled'"
 
 steps:
-  - command: "ts-node .buildkite/scripts/serverless/emergency_release/trigger_container_build.ts"
+  - command: "tsx .buildkite/scripts/serverless/emergency_release/trigger_container_build.ts"
     label: "Trigger container build if there are new commits"
     env:
       DRY_RUN: $DRY_RUN
