--- a/src/plugins/data/tsconfig.json
+++ b/src/plugins/data/tsconfig.json
@@ -55,7 +55,8 @@
     "@kbn/core-test-helpers-model-versions",
     "@kbn/esql-utils",
     "@kbn/react-kibana-mount",
-    "@kbn/search-types"
+    "@kbn/search-types",
+    "@kbn/safer-lodash-set"
   ],
   "exclude": [
     "target/**/*",
