--- a/.buildkite/pipelines/serverless_deployment/run_serverless_release_assistant.yml
+++ b/.buildkite/pipelines/serverless_deployment/run_serverless_release_assistant.yml
@@ -11,10 +11,10 @@ agents:
 steps:
   - label: "List potential commits"
     commands:
-      - tsx .buildkite/scripts/serverless/create_deploy_tag/release_wizard_messaging.ts --state initialize
-      - tsx .buildkite/scripts/serverless/create_deploy_tag/release_wizard_messaging.ts --state collect_commits
-      - tsx .buildkite/scripts/serverless/create_deploy_tag/list_commit_candidates.ts 50
-      - tsx .buildkite/scripts/serverless/create_deploy_tag/release_wizard_messaging.ts --state wait_for_selection
+      - ts-node .buildkite/scripts/serverless/create_deploy_tag/release_wizard_messaging.ts --state initialize
+      - ts-node .buildkite/scripts/serverless/create_deploy_tag/release_wizard_messaging.ts --state collect_commits
+      - ts-node .buildkite/scripts/serverless/create_deploy_tag/list_commit_candidates.ts 50
+      - ts-node .buildkite/scripts/serverless/create_deploy_tag/release_wizard_messaging.ts --state wait_for_selection
     key: select_commit
     env:
       AUTO_SELECT_COMMIT: $AUTO_SELECT_COMMIT
@@ -23,9 +23,9 @@ steps:
 
   - label: "Collect commit info"
     commands:
-      - tsx .buildkite/scripts/serverless/create_deploy_tag/release_wizard_messaging.ts --state collect_commit_info
+      - ts-node .buildkite/scripts/serverless/create_deploy_tag/release_wizard_messaging.ts --state collect_commit_info
       - bash .buildkite/scripts/serverless/create_deploy_tag/collect_commit_info.sh
-      - tsx .buildkite/scripts/serverless/create_deploy_tag/release_wizard_messaging.ts --state wait_for_confirmation
+      - ts-node .buildkite/scripts/serverless/create_deploy_tag/release_wizard_messaging.ts --state wait_for_confirmation
     key: collect_data
     depends_on: select_commit
     env:
@@ -35,11 +35,11 @@ steps:
 
   - label: ":ship: Create Deploy Tag"
     commands:
-      - tsx .buildkite/scripts/serverless/create_deploy_tag/release_wizard_messaging.ts --state create_deploy_tag
+      - ts-node .buildkite/scripts/serverless/create_deploy_tag/release_wizard_messaging.ts --state create_deploy_tag
       - bash .buildkite/scripts/serverless/create_deploy_tag/create_deploy_tag.sh
-      - tsx .buildkite/scripts/serverless/create_deploy_tag/release_wizard_messaging.ts --state tag_created
-      - tsx .buildkite/scripts/serverless/create_deploy_tag/generate_gpctl_trigger.ts
-      - tsx .buildkite/scripts/serverless/create_deploy_tag/release_wizard_messaging.ts --state trigger_gpctl
+      - ts-node .buildkite/scripts/serverless/create_deploy_tag/release_wizard_messaging.ts --state tag_created
+      - ts-node .buildkite/scripts/serverless/create_deploy_tag/generate_gpctl_trigger.ts
+      - ts-node .buildkite/scripts/serverless/create_deploy_tag/release_wizard_messaging.ts --state trigger_gpctl
     env:
       DRY_RUN: $DRY_RUN
 
