--- a/package.json
+++ b/package.json
@@ -1623,6 +1623,8 @@
     "html": "1.0.0",
     "html-loader": "^1.3.2",
     "http-proxy": "^1.18.1",
+    "http2-proxy": "^5.0.53",
+    "http2-wrapper": "^2.2.1",
     "ignore": "^5.3.0",
     "jest": "^29.6.1",
     "jest-canvas-mock": "^2.5.2",
