--- a/src/plugins/data/tsconfig.json
+++ b/src/plugins/data/tsconfig.json
@@ -56,6 +56,7 @@
     "@kbn/esql-utils",
     "@kbn/react-kibana-mount",
     "@kbn/search-types",
+    "@kbn/safer-lodash-set",
   ],
   "exclude": [
     "target/**/*",
