--- a/src/plugins/esql_datatable/tsconfig.json
+++ b/src/plugins/esql_datatable/tsconfig.json
@@ -21,7 +21,11 @@
     "@kbn/kibana-react-plugin",
     "@kbn/core",
     "@kbn/ui-actions-plugin",
-    "@kbn/field-formats-plugin"
+    "@kbn/field-formats-plugin",
+    "@kbn/i18n",
+    "@kbn/unified-doc-viewer",
+    "@kbn/unified-doc-viewer-plugin",
+    "@kbn/core-notifications-browser"
   ],
   "exclude": [
     "target/**/*",
