--- a/config/serverless.oblt.yml
+++ b/config/serverless.oblt.yml
@@ -10,16 +10,22 @@ xpack.search.notebooks.enabled: false
 
 ## Fine-tune the observability solution feature privileges. Also, refer to `serverless.yml` for the project-agnostic overrides.
 xpack.features.overrides:
+  ### `APM and User Experience` feature is renamed to `Applications`.
+  apm.name: "Applications"
   ### Dashboards feature should be moved from Analytics category to the Observability one.
   dashboard.category: "observability"
   ### Discover feature should be moved from Analytics category to the Observability one.
   discover.category: "observability"
+  ### `Metrics` feature is renamed to `Infrastructure`.
+  infrastructure.name: "Infrastructure"
   ### Machine Learning feature should be moved from Analytics category to the Observability one and renamed to `AI Ops`.
   ml:
     category: "observability"
     order: 1200
   ### Stack alerts is hidden in Role management since it's not needed.
   stackAlerts.hidden: true
+  ### `Synthetics and Uptime` feature is renamed to `Synthetics` since `Uptime` is not available.
+  uptime.name: "Synthetics"
 
 ## Enable the slo plugin
 xpack.slo.enabled: true
