--- a/config/serverless.oblt.yml
+++ b/config/serverless.oblt.yml
@@ -10,22 +10,90 @@ xpack.search.notebooks.enabled: false
 
 ## Fine-tune the observability solution feature privileges. Also, refer to `serverless.yml` for the project-agnostic overrides.
 xpack.features.overrides:
-  ### `APM and User Experience` feature is renamed to `Applications`.
-  apm.name: "Applications"
+  ### Applications feature privileges are fine-tuned to grant access to Logs, and Observability apps.
+  apm:
+    ### By default, this feature named as `APM and User Experience`, but should be renamed to `Applications`.
+    name: "Applications"
+    privileges:
+      # Infrastructure's `All` feature privilege should implicitly grant `All` access to Logs and Observability apps.
+      all.composedOf:
+        - feature: "logs"
+          privileges: [ "all" ]
+        - feature: "observability"
+          privileges: [ "all" ]
+      # Infrastructure's `Read` feature privilege should implicitly grant `Read` access to Logs and Observability apps.
+      read.composedOf:
+        - feature: "logs"
+          privileges: [ "read" ]
+        - feature: "observability"
+          privileges: [ "read" ]
   ### Dashboards feature should be moved from Analytics category to the Observability one.
   dashboard.category: "observability"
-  ### Discover feature should be moved from Analytics category to the Observability one.
-  discover.category: "observability"
-  ### `Metrics` feature is renamed to `Infrastructure`.
-  infrastructure.name: "Infrastructure"
+  ### Discover feature should be moved from Analytics category to the Observability one and its privileges are
+  ### fine-tuned to grant access to Observability app.
+  discover:
+    category: "observability"
+    privileges:
+      # Discover `All` feature privilege should implicitly grant `All` access to Observability app.
+      all.composedOf:
+        - feature: "observability"
+          privileges: [ "all" ]
+      # Discover `Read` feature privilege should implicitly grant `Read` access to Observability app.
+      read.composedOf:
+        - feature: "observability"
+          privileges: [ "read" ]
+  ### Infrastructure feature privileges are fine-tuned to grant access to Logs, and Observability apps.
+  infrastructure:
+    ### By default, this feature named as `Metrics`, but should be renamed to `Infrastructure`.
+    name: "Infrastructure"
+    privileges:
+      # Infrastructure's `All` feature privilege should implicitly grant `All` access to Logs and Observability apps.
+      all.composedOf:
+        - feature: "logs"
+          privileges: [ "all" ]
+        - feature: "observability"
+          privileges: [ "all" ]
+      # Infrastructure's `Read` feature privilege should implicitly grant `Read` access to Logs and Observability apps.
+      read.composedOf:
+        - feature: "logs"
+          privileges: [ "read" ]
+        - feature: "observability"
+          privileges: [ "read" ]
+  ### Logs feature is hidden in Role management since it's automatically granted by either Infrastructure, or Applications features.
+  logs.hidden: true
   ### Machine Learning feature should be moved from Analytics category to the Observability one and renamed to `AI Ops`.
   ml:
     category: "observability"
     order: 1200
+  ### Observability feature is hidden in Role management since it's automatically granted by either Discover,
+  ### Infrastructure, Applications, Synthetics, or SLOs features.
+  observability.hidden: true
+  ### SLOs feature privileges are fine-tuned to grant access to Observability app.
+  slo:
+    privileges:
+      # SLOs `All` feature privilege should implicitly grant `All` access to Observability app.
+      all.composedOf:
+        - feature: "observability"
+          privileges: [ "all" ]
+      # SLOs `Read` feature privilege should implicitly grant `Read` access to Observability app.
+      read.composedOf:
+        - feature: "observability"
+          privileges: [ "read" ]
   ### Stack alerts is hidden in Role management since it's not needed.
   stackAlerts.hidden: true
-  ### `Synthetics and Uptime` feature is renamed to `Synthetics` since `Uptime` is not available.
-  uptime.name: "Synthetics"
+  ### Synthetics feature privileges are fine-tuned to grant access to Observability app.
+  uptime:
+    ### By default, this feature named as `Synthetics and Uptime`, but should be renamed to `Synthetics` since `Uptime` is not available.
+    name: "Synthetics"
+    privileges:
+      # Synthetics `All` feature privilege should implicitly grant `All` access to Observability app.
+      all.composedOf:
+        - feature: "observability"
+          privileges: [ "all" ]
+      # Synthetics `Read` feature privilege should implicitly grant `Read` access to Observability app.
+      read.composedOf:
+        - feature: "observability"
+          privileges: [ "read" ]
 
 ## Enable the slo plugin
 xpack.slo.enabled: true
