--- a/src/plugins/esql_datatable/tsconfig.json
+++ b/src/plugins/esql_datatable/tsconfig.json
@@ -25,7 +25,8 @@
     "@kbn/i18n",
     "@kbn/unified-doc-viewer",
     "@kbn/unified-doc-viewer-plugin",
-    "@kbn/core-notifications-browser"
+    "@kbn/core-notifications-browser",
+    "@kbn/shared-ux-utility"
   ],
   "exclude": [
     "target/**/*",
